Cambios y generación de nuevos componentes dentro del proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <!-- Para ver la vista -->
-    <wc-home></wc-home>
+    <!-- <wc-home></wc-home> -->
+     <h1>Web Components</h1>
+     <wc-navbar></wc-navbar>
+
 </body>
 </html>
