Cambios del index.html con el nuevo componente: navbar

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Components</title>
 </head>
+
 <body>
-    <!-- Para ver la vista -->
-    <!-- <wc-home></wc-home> -->
-     <h1>Web Components</h1>
+     <h1>Web Components: Navbar</h1>
+     <!-- <wc-home></wc-home> -->
      <wc-navbar></wc-navbar>
 
 </body>
+
 </html>
