Modificación de los diferentes componentes y nuevos archivos puestos.

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,21 @@
 
 <body>
      <h1>Web Components: Navbar</h1>
+     <!-- Formulario con componentes en interacción -->
      <!-- <wc-home></wc-home> -->
+      <!-- Navegación de paginas -->
      <wc-navbar></wc-navbar>
+     <wc-viewport>
+        <wc-route>
+             <wc-home></wc-home>
+        </wc-route>
+        <wc-route>
+            <wc-page2></wc-page2>
+        </wc-route>
+        <wc-route> 
+            <wc-page3></wc-page3>
+        </wc-route>
+     </wc-viewport>
 
 </body>
 
